--- a/style.css
+++ b/style.css
@@ -65,8 +65,9 @@ main {
 
 .meme--image {
     display: block;
-    margin-left: 360px;
-    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
     border-radius: 3px;
 }
 
